Fix T82074: Volume to Mesh normals are inverted

OpenVDB seems to have a different winding order convention.

Reviewers: brecht

Differential Revision: https://developer.blender.org/D9434